# directive-rag

./: .gitignore  README.md  main.py  pyproject.toml
directive_bot/: __init__.py  directive_processor.py  directive_rag.py  document_splitter.py
directive_bot/knowledgebase/: directive.html
